--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
   </head>
   <body>
     <main>
-      <p>Dati studente:</p>
+      <h2>Esercizio 1</h2>
+      <p class="n1">Dati oggetto studente:</p>
 
+      <h2>Esercizio 2</h2>
+      <p class="n2">Nome e cognome in oggetti dell'array studenti:</p>
+
+      <h2>Esercizio 3</h2>
+      <button class="add" type="button" name="button">Aggiungi studente</button>
+      <p class="n3"></p>
     </main>
 
 
